crates/runtime/tests/snapshots/class_def__class_def_with_field.snap
---
source: crates/vm/tests/class_def.rs
expression: snapshot
---
# Input:
class T:
  v = 10

t0 = T()
t1 = T(v=20)

print t0.v, t1.v


# Result (success):
none

# Stdout:
10 20

