crates/runtime/tests/snapshots/class_def__empty_class_def.snap
---
source: crates/runtime/tests/class_def.rs
expression: snapshot
---
# Input:
class T: pass
print T


# Result (success):
none

# Stdout:
<class def "T">

